<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.sch.smktelkom_mlg.biodata.widget_4">

    <TextView
        android:id="@+id/textViewHobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobi"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <CheckBox
        android:id="@+id/checkBoxBC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/membaca"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp" />

    <CheckBox
        android:id="@+id/checkBoxOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olahraga"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="84dp" />

    <CheckBox
        android:id="@+id/checkBoxNL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menulis"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="148dp" />

    <CheckBox
        android:id="@+id/checkBoxNF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nonton_film"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="180dp" />

    <CheckBox
        android:id="@+id/checkBoxGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menggambar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="116dp" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="231dp" />

    <TextView
        android:id="@+id/textViewHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keluaran"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="297dp" />
</LinearLayout>