<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.sch.smktelkom_mlg.biodata.widget_3">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupStatus"
        android:layout_width="240dp"
        android:layout_height="246dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonBM"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/belum_menikah"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="71dp" />

        <RadioButton
            android:id="@+id/radioButtonM"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menikah"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="111dp" />

        <RadioButton
            android:id="@+id/radioButtonD"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/duda"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="150dp" />

        <RadioButton
            android:id="@+id/radioButtonJ"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/janda"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="190dp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextJA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/jumlah_anak"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oke"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="249dp" />

    <TextView
        android:id="@+id/textViewHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="309dp" />
</LinearLayout>
